--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                     <ul class="nav__list">
                         <li class="nav__item"><a href="index.html" class="nav__link active">Home</a></li>
                         <li class="nav__item"><a href="cvindex.html" class="nav__link">About</a></li>
+                        <li class="nav__item"><a href="index.html" class="nav__link active">Home</a></li>
+                        <li class="nav__item"><a href="cvindex.html" class="nav__link">About</a></li>
+                        <li class="nav__item"><a href="index.html" class="nav__link active">Home</a></li>
+                        <li class="nav__item"><a href="cvindex.html" class="nav__link">About</a></li>
                    
                     </ul>
                 </div>
@@ -51,13 +55,15 @@
             <section class="home" id="home">
                 <div class="home__container bd-grid">
                     <div class="home__img">
-                        <img src="assets/img/01.jpeg" alt="" data-speed="-2" class="move">
+                        <img src="assets/img/01.PNG" alt="" data-speed="-2" class="move">
 +
                     </div>
 
                     <div class="home__data">
-                        <h1 class="home__title">Welcome!!<br></h1>
-                        <p class="home__description">Am Mokgadi Mogoelelwa, a software developer student <br> from Tshwana University of technology.<br>Am currently enrolled for a <br>learnership at dynamic dna in Randburg.</p>
+                        <h1 class="home__title">HELLO!!<br></h1>
+                        <p class="home__description">I am Mokgadi Mogoelelwa, Am a java software developer learner 
+                            <br>At Geeks4Learning. I did Information Technology Specialising in Software.<br>
+                             at Tshwana University of Technology Development Am currently enrolled for a <br>learnership at dynamic dna in Randburg.</p>
                         <a href="cvindex.html" class="home__button">see more</a>
 					
                     <div class="notification"> </div>
