--- a/cvindex.html
+++ b/cvindex.html
@@ -26,7 +26,7 @@
           <p class="description profile_description">
             I'm a dedicated and a hard working software developer looking to establish my career,I wish to work in a growth-oriented company and contribute to the development of the organization while upgrading my skill set and knowledge.
           </p>
-          <a class="downloadBtn" href="./Mokgadi's CV.pdf" download="Resume.pdf">Download Resume</a>
+          <a class="downloadBtn" href="./Mokgadi-Mogoelelwa’s CV.pdf" download="Resume.pdf">Download Resume</a>
         </div>
       </div>
     </div>
@@ -90,7 +90,7 @@
           </p>
         </div>
         <div class="exp_item">
-          <p class="item_preTitle">2022 - present</p>
+          <p class="item_preTitle">June 2022 -  May 2023</p>
           <h4 class="item_title">Dynamicdna</h4>
           <p class="item_subtitle">Learnership</p>
           <p class="description">
