--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <title>MOKGADI MOGOELELWA</title>
     </head>
 
+
+
+
+    <body>
+
     <!-- ===== HEADER ===== -->
     <header class="custom-header">
         <div class="weather-container">
@@ -36,16 +41,11 @@
                 <li class="nav__item"><a href="index.html" class="nav__link active">Home</a></li>
                 <li class="nav__item"><a href="cvindex.html" class="nav__link">About</a></li>
                 <li class="nav__item"><a href="project.html" class="nav__link active">Project</a></li>
-                <li class="nav__item"><a href="index.html" class="nav__link active">Certificates</a></li>
+                <li class="nav__item"><a href="Certificates.html" class="nav__link active">Certificates</a></li>
 
             </ul>
         </nav>
     </header>
-
-
-    <body>
-
-
 
     <main class="main-centered">
         <div class="intro-content">
